[tool.poetry]
name = "labeler-gh-action-validator-env"
version = "0.1.0"
description = ""
authors = ["David Sutta <suttad@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
